# dig-evidence

./: CHANGELOG.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml  publish.yml
src/: error.rs  evidence.rs  lib.rs  range_inclusion.rs  read_integrity.rs  root_anchor.rs
tests/: golden.rs
